tests/fixtures/valid/builtins/set.py
# Valid set() calls
# Auto-generated by scripts/generate_tests.py

b0_set_str = set("hello")
b1_set_bytes = set(b"hello")
b2_set_list = set([1, 2, 3])
b3_set_dict = set({"a": 1})
b4_set_set = set({1, 2, 3})

# Print all variables
print("b0_set_str:", b0_set_str)
print("b1_set_bytes:", b1_set_bytes)
print("b2_set_list:", b2_set_list)
print("b3_set_dict:", b3_set_dict)
print("b4_set_set:", b4_set_set)

print("set() tests passed!")
